refactor: clean up unused imports, apply pattern matching, and resolve raw type warnings  • auth-service: Removed unused imports (AddressException, ArgumentMatchers.eq) and added @NonNull annotations in security classes and tests.   • gateway-service: Refactored GlobalExceptionHandler to use pattern matching for instanceof (rse, hsce) and simplified unboxing checks in JwtValidationFilter.    • notification-service: Removed unused imports in EmailNotificationChannel and fixed generic raw-type warnings for WebClient.RequestHeadersSpec<?> in WebhookNotificationChannelTest.